--- a/styles/themes.css
+++ b/styles/themes.css
@@ -4,3 +4,120 @@
 ✦ theme-light — класс светлой темы
 ✦ не забудьте описать стили для изменения темы через медизапрос пользовательских предпочтений
 */
+
+:root.theme-light {
+    --main-font: 'Inter-Variable';
+    --main-font-weight: 400px;
+    --header-font-weight: 700px;
+    --header-font-height: 323px;
+    --card-font-weight: 696px;
+    --footer-font-weight: 337px;
+    --accent-font: 'PressStart2P-Regular';
+    --bg-color: rgb(250,250,250);
+    --bg-gradient: 
+        repeating-linear-gradient(to right, #d3d3d3, rgb(244 152 173 / 0) 2px),
+        repeating-linear-gradient( #d3d3d3, rgb(244 152 173 / 0) 2px),
+        linear-gradient(to bottom,#e7e7e7, #1a1a1a);
+    --text-color: #000000;
+    --logo-color: rgb(250,250,250);
+    --border-color: #000;
+    --border-label: #fff;
+    --button-content-color: #fff;
+    --heart-sparks-fill: #FF0000;
+    --heart-sparks-fill-transparent: rgb(255 0 0 / 0%);
+    --heart-color: #000;
+    --herat-core-fill: #f00;
+    --herat-core-fill-transparent: rgb(255 0 0 / 0%);
+    --heart-main-body-fill: #f00;
+    --heart-main-body-fill-transparent: rgb(255 0 0 / 0%);
+    --heart-contour-fill:#f00;
+}
+
+:root.theme-dark {
+    --main-font: 'Inter-Variable';
+    --main-font-weight: 465px;
+    --header-font-weight: 700px;
+    --header-font-height: 368px;
+    --card-font-weight: 696px;
+    --footer-font-weight: 335px;
+    --accent-font: 'PressStart2P-Regular';
+    --bg-color: #000000;
+    --bg-gradient: 
+        repeating-linear-gradient(to right, #000, rgb(244 152 173 / 0) 2px),
+        repeating-linear-gradient( #000, rgb(244 152 173 / 0) 2px),
+        linear-gradient(to bottom,#007F0C, #004306);
+    --text-color: #00CC14;
+    --logo-color: #000000;
+    --border-color: #00CC14;
+    --border-label: #000;
+    --button-content-color: #00CC14;
+    --heart-sparks-fill: #FF0000;
+    --heart-sparks-fill-transparent: rgb(255 0 0 / 0%);
+    --heart-color: #00CC14;
+    --herat-core-fill: #f00;
+    --herat-core-fill-transparent:rgb(255 0 0 / 0%);
+    --heart-main-body-fill: #f00;
+    --heart-main-body-fill-transparent: rgb(255 0 0 / 0%);
+    --heart-contour-fill:#f00;
+}
+
+
+@media (prefers-color-scheme: dark) {
+    :root {
+    --main-font: 'Inter-Variable';
+    --main-font-weight: 465px;
+    --header-font-weight: 700px;
+    --header-font-height: 368px;
+    --card-font-weight: 696px;
+    --footer-font-weight: 335px;
+    --accent-font: 'PressStart2P-Regular';
+    --bg-color: #000000;
+    --bg-gradient: 
+        repeating-linear-gradient(to right, #000, rgb(244 152 173 / 0) 2px),
+        repeating-linear-gradient( #000, rgb(244 152 173 / 0) 2px),
+        linear-gradient(to bottom,#007F0C, #004306);
+    --text-color: #00CC14;
+    --logo-color: #000000;
+    --border-color: #00CC14;
+    --border-label: #000;
+    --button-content-color: #00CC14;
+    --heart-sparks-fill: #FF0000;
+    --heart-sparks-fill-transparent: rgb(255 0 0 / 0%);
+    --heart-color: #00CC14;
+    --herat-core-fill: #f00;
+    --herat-core-fill-transparent:rgb(255 0 0 / 0%);
+    --heart-main-body-fill: #f00;
+    --heart-main-body-fill-transparent: rgb(255 0 0 / 0%);
+    --heart-contour-fill:#f00;
+    }
+}
+
+@media(prefers-color-scheme: light) {
+    :root {
+    --main-font: 'Inter-Variable';
+    --main-font-weight: 400px;
+    --header-font-weight: 700px;
+    --header-font-height: 364px;
+    --card-font-weight: 696px;
+    --footer-font-weight: 335px;
+    --accent-font: 'PressStart2P-Regular';
+    --bg-color: rgb(250,250,250);
+    --bg-gradient: 
+        repeating-linear-gradient(to right, #d3d3d3, rgb(244 152 173 / 0) 2px),
+        repeating-linear-gradient( #d3d3d3, rgb(244 152 173 / 0) 2px),
+        linear-gradient(to bottom,#e7e7e7, #1a1a1a);
+    --text-color: #000000;
+    --logo-color: rgb(250,250,250);
+    --border-color: #000;
+    --border-label: #fff;
+    --button-content-color: #fff;
+    --heart-sparks-fill: #f00;
+    --heart-sparks-fill-transparent: rgb(255 0 0 / 0%);
+    --heart-color: #000;
+    --herat-core-fill: #f00;
+    --herat-core-fill-transparent:rgb(255 0 0 / 0%);
+    --heart-main-body-fill: #f00;
+    --heart-main-body-fill-transparent: rgb(255 0 0 / 0%);
+    --heart-contour-fill:#f00;
+    }
+}
