--- a/styles/style.css
+++ b/styles/style.css
@@ -14,89 +14,95 @@
 Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.
 
 */
-/*{ outline: 1px solid var(--border-color);}*/
+/* *{ outline: 1px solid red;} */
 
 .page {
-  padding: 100px 0;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  inline-size: 100%;
+  max-inline-size: 850px;
   min-inline-size: 320px;
   min-block-size: 100dvb;
-  font-family: var(--main-font), 'Arial', sans-serif;
+  font-family: var(--main-font), "Arial", sans-serif;
+  font-variation-settings: "wght" var(--header-font-weight), "wdth" 100,
+    "opsz" 0;
   background-color: var(--bg-color);
   background-image: var(--bg-gradient);
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
   color: var(--text-color);
 }
 
 .header {
+  margin: 100px auto 95px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: end;
   border: 2px solid var(--border-color);
-  max-width: var(--header-font-weight);
-  margin: 0 auto 100px;
+  width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
   background-color: var(--logo-color);
 }
 
 .header__title {
-  margin: 0px 175px 0 175px;
+  margin: 20px auto 0;
   display: flex;
   flex-direction: column;
   align-items: center;
   text-transform: uppercase;
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), "fantasy", sans-serif;
   font-weight: var(--main-font-weight);
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
   line-height: 23px;
   color: var(--text-color);
-  gap: 20px;
 }
 
+/* Логотип HTML */
 .header__title-text {
   margin: 136px 120.5px 0;
   display: flex;
   align-items: flex-end;
-  text-transform: uppercase;  
-  font-family: var(--accent-font);
+  text-transform: uppercase;
+  font-family: var(--accent-font), "fantasy", sans-serif;
   font-weight: var(--main-font-weight);
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
   line-height: 65px;
   color: var(--text-color);
+  outline: none;
+  text-decoration: none;
+}
+
+.theme-menu {
+  margin: 24px 0;
 }
 
 .theme-menu__list {
-  margin:  23px 0 25px 15px;
+  padding-left: 17px;
   display: flex;
   flex-direction: column;
-  text-align: left;
-  gap: 8px;
-  float: left;
+  gap: 7px;
 }
 
 .theme-menu__button {
   position: relative;
   text-transform: uppercase;
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), "fantasy", sans-serif;
   font-size: clamp(0.875rem, 0.875rem + 0vw, 0.875rem);
   line-height: 14px;
   background-color: transparent;
   border-style: none;
   cursor: pointer;
+  transition: color 0.3s;
+  transition-timing-function: ease;
 }
 
 .theme-menu__button::after {
-  content: '';
+  content: "";
   position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: var(--border-color);
-  transform-origin: left;
-  transition: transform 0.3s ease;
-  transform: scaleX(0);
 }
 
 .theme-menu__button:hover {
@@ -109,12 +115,24 @@
 
 .theme-menu__button:focus {
   outline: none;
+  border: none;
   transform: scaleX(1);
-  opacity: 0.5;
+  opacity: 0.6;
+  text-decoration: underline;
+}
+
+.theme-menu__button:focus::after {
+  background-color: var(--border-color);
+  transform-origin: left;
+  transition: transform 0.3s ease;
+  transform: scaleX(0);
 }
 
 .theme-menu__button:focus-visible {
   opacity: 0.6;
+  outline: none;
+  border: none;
+  color: var(--border-color);
 }
 
 .theme-menu__button:focus-visible::after {
@@ -124,22 +142,19 @@
 .theme-menu__button:disabled {
   position: relative;
   opacity: 0.6;
-  transition: color 0.3s;
-  transition-timing-function: ease;
   pointer-events: none;
 }
 
 .theme-menu__button:disabled::before {
-  content: '▶';
+  content: "▶";
   position: absolute;
-  animation: menu-replay 0.5s infinite ease-in-out reverse;
+  animation: menu-replay 0.5s infinite ease-in-out alternate-reverse;
   inset-inline-start: -20px;
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
-  align-self: center;
+  width: clamp(23.4375rem, 16.2852rem + 30.5164vw, 43.75rem);
+  margin: 0 auto 103px;
 }
 
 /* Карточки */
@@ -148,27 +163,18 @@
   display: flex;
   flex-direction: column;
   align-self: center;
-  max-width: var(--card-font-weight);
-  min-height: 718px;
   background-color: var(--bg-color);
-  outline: 2px solid var(--border-color);
+  border: 2px solid var(--border-color);
 }
 
 .card__title {
-  padding-left: 10px;
-  max-width: 696px;
-  min-height: 31px;
-  display: flex;
-  align-items: center;
-  font-family: var(--main-font);
-  font-variation-settings: 
-  'wght' var(--header-font-weight),
-  'wdth' 100,
-  'opsz' 0;
+  padding: 3.5px 10px;
+  font-family: var(--main-font), "Arial", sans-serif;
+  font-variation-settings: "wght" var(--header-font-weight), "wdth" 100,
+    "opsz" 0;
   font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
   line-height: 22px;
   color: var(--text-color);
-  outline: 2px solid var(--border-color);
 }
 
 .card__image {
@@ -178,13 +184,19 @@
   min-width: 375px;
   height: auto;
   overflow: hidden;
-  outline: 2px solid var(--border-color);
+  border-top: 2px solid var(--border-color);
+  border-bottom: 2px solid var(--border-color);
   position: relative;
 }
 
+.card-image__all {
+  display: block;
+  object-fit: cover;
+  object-position: center;
+}
+
 .card__image-text {
-  margin: 25px 25px 0 0;
-  height: 14px;
+  margin: 30px 22px 0 0;
   display: flex;
   align-self: flex-start;
   justify-content: flex-end;
@@ -192,55 +204,45 @@
   position: absolute;
   opacity: 0.5;
   color: var(--text-color);
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), "fantasy", sans-serif;
   -webkit-text-stroke: 1px var(--border-label);
-  font-weight: 400;
+  font-weight: var(--main-font-weight);
   font-size: clamp(0.875rem, 0.875rem + 0vw, 0.875rem);
   line-height: 14px;
   mix-blend-mode: hard-light;
   z-index: 100;
-  text-shadow:
-    1px 0 0 var(--border-label),
-    1px 0 0 var(--border-label),
-    0 1px 0 var(--border-label),
-    0 1px 0 var(--border-label),
-    -1px 0 0 var(--border-label),
-    -1px 0 0 var(--border-label),
-    0 -1px 0 var(--border-label),
-    0 -1px 0 var(--border-label);
+  text-shadow: 1px 0 0 var(--border-label), 1px 0 0 var(--border-label),
+    0 1px 0 var(--border-label), 0 1px 0 var(--border-label),
+    -1px 0 0 var(--border-label), -1px 0 0 var(--border-label),
+    0 -1px 0 var(--border-label), 0 -1px 0 var(--border-label);
 }
 
 @supports (
-  (text-stroke: 1px var(--border-label))
-  or
-  (-webkit-text-stroke: 1px var(--border-label))
+  (text-stroke: 1px var(--border-label)) or
+    (-webkit-text-stroke: 1px var(--border-label))
 ) {
   .card__image-text {
     text-shadow: none;
-    -webkit-text-stroke: 1px var(--border-label)
+    -webkit-text-stroke: 1px var(--border-label);
   }
 }
 
 .card__container {
-  min-width: 375px;
-  max-height: 959px;
-}
-
-.card__container-text {
   margin: 25px;
   display: flex;
   flex-direction: column;
-  gap: 25px;  
-  min-width: 317.05px;
-  height: auto;
+  gap: 25px;
+}
+
+.card__container-text {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 
 .card__text {
-  font-family: var(--main-font);
-    font-variation-settings: 
-    'wght' var(--main-font-weight),
-    'wdth' 100,
-    'opsz' 0;
+  font-family: var(--main-font), "Arial", sans-serif;
+  font-variation-settings: "wght" var(--main-font-weight), "wdth" 100, "opsz" 0;
   font-size: clamp(1.125rem, 1.125rem + 0vw, 1.125rem);
   line-height: 21px;
 }
@@ -250,15 +252,22 @@
   margin: 0 25px 25px 0;
   display: flex;
   align-self: flex-end;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
 }
 
 /* Кнопка сердце */
 .card__icon-button {
-  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-self: flex-end;
+  align-self: flex-end;
   border-style: none;
   cursor: pointer;
   background-color: transparent;
-  padding-top: 2px;
+  transition: 0.3s ease;
 }
 
 .card__icon-button:focus {
@@ -267,105 +276,16 @@
 
 .card__icon-button:focus-visible {
   border: 2px solid var(--border-color);
-  transition: border 0.5s ease;
 }
 
-/* Анимация сердца */
-.card__icon-button:hover {
-  .like-icon {
-    .core {
-      fill: var(--heart-color);
-      transition: fill 0.3s linear;
-      transition-delay: 0.03s;
-    }
-
-    .main-body {
-      fill: var(--heart-color);
-      transition: fill 0.5s linear;
-      transition-delay: 0.05s;
-    }
-  }
-}
-
-.card__icon-button:active {
-  .like-icon {
-    .core {
-      fill: var(--heart-sparks-fill);
-      transition: fill 0.3s linear;
-      transition-delay: 0.03s;
-    }
-
-    .main-body {
-      fill: var(--heart-sparks-fill);
-      transition: fill 0.5s linear;
-      transition-delay: 0.05s;
-    }
-  }
-}
-
+/* Картинка сердца */
 .like-icon {
   width: 39px;
   height: 36px;
   cursor: pointer;
   color: var(--text-color);
-
-  .contour {
-    fill: var(--text-color);
-    transition: fill 0.1s linear;
-  }
-
-  .main-body {
-    fill: var(--heart-main-body-fill-transparent);
-    transition: fill 0.1s linear;
-  }
-
-  .core {
-    fill: var(--herat-core-fill-transparent);
-    transition: fill 0.1s linear;
-  }
-
-  .sparks {
-    fill: var(--heart-sparks-fill-transparent);
-    transition: fill 0.1s linear;
-  }
 }
 
-.like-icon.is-liked {
-  animation: heart-icon-scaling 0.3s 0.1s ease-in reverse;
-
-  .contour {
-    animation: contour-repainting 0.3s ease-in;
-    transition-delay: 0.1s;
-    animation-duration: 0.3s;
-  }
-
-  .main-body {
-    animation: main-body-repainting 0.3s ease-in;
-    transition-delay: 0.1s;
-    animation-duration: 0.3s;
-  }
-
-  .core {
-    animation: core-repainting 0.3s ease-in;
-    transition-delay: 0.1s;
-    animation-duration: 0.3s;
-  }
-
-  .sparks {
-    animation: sparks-repainting 0.3s ease-in reverse;
-    animation-delay: 0.3s;
-  }
-}
-
-/* Картинка сердца 
-.like-icon {
-  width: 39px;
-  height: 36px;
-  cursor: pointer;
-  color: var(--text-color);
-}*/
-
-/* Анимация сердца */
 .sparks {
   opacity: 0;
 }
@@ -375,17 +295,11 @@
   box-sizing: border-box;
   padding: 10px 0;
   inline-size: 130px;
-  height: 38px;
-  border: 2px solid var(--border-color);
-  background-color: transparent;
-  cursor: pointer;
 }
 
 /* Текст кнопки Like и кнопки Сохранить на память */
 .button__text {
-  width: 56px;
-  height: 13px;
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), "fantasy", sans-serif;
   font-weight: var(--main-font-weight);
   font-size: clamp(0.875rem, 0.875rem + 0vw, 0.875rem);
   line-height: 90%;
@@ -402,12 +316,10 @@
 }
 
 .footer__button {
-  margin: 0;
-  width: var(--footer-font-weight);
-  min-height: 55px;
-  background-color: var(--bg-color);
-  border: 2px solid var(--border-color);
-  cursor: pointer;
+  margin: auto;
+  padding: 15px 20px;
+  line-height: 12px;
+  gap: 12px;
 }
 
 /* Иконка floppy*/
@@ -418,14 +330,19 @@
   mix-blend-mode: difference;
   position: relative;
   z-index: 2;
+  justify-content: center;
+  align-items: center;
 }
 
 .settings-button {
   position: relative;
-}
-
-.settings-button-save {
-  padding: 0 0 4px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid var(--border-color);
+  transition: 0.3s ease;
+  background-color: var(--bg-color);
+  cursor: pointer;
 }
 
 .settings-button:focus {
@@ -438,7 +355,7 @@
 
 /* Анимация при наведении */
 .settings-button::before {
-  content: '';
+  content: "";
   position: absolute;
   inset: 0;
   z-index: 1;
@@ -461,7 +378,7 @@
   background-color: var(--bg-color);
   border: 2px solid var(--border-color);
   color: var(--text-color);
-  font-family: var(--accent-font);
+  font-family: var(--accent-font), "fantasy", sans-serif;
   font-weight: var(--main-font-weight);
   font-size: clamp(0.875rem, 0.875rem + 0vw, 0.875rem);
   text-transform: uppercase;
@@ -473,9 +390,7 @@
   margin: 30px;
   display: grid;
   grid-template-columns: auto 1fr;
-  /* grid-template-rows: 1fr 98px;*/
   width: 293px;
-  height: 63px;
   gap: 20px;
 }
 
@@ -500,6 +415,7 @@
   align-self: center;
   inline-size: 39px;
   block-size: 39px;
+  justify-self: none;
 }
 
 /* Задний слой открытого окна */
@@ -540,52 +456,63 @@
   filter: grayscale(0.8);
 }
 
-
 @media (width <= 375px) {
   .header {
-   max-height: 327px;
-  }
-
-  .header__title {
-    gap: 8px;
+    margin: 100px auto;
   }
 
   .header__title-text {
     margin: 113px 14px 0;
   }
 
+  .header__title {
+    margin: 6px auto 0;
+  }
+
+  .theme-menu {
+    margin: 2px 0;
+  }
+
   .theme-menu__list {
-    margin: 18px 0  18px 19px;
+    margin: 18px 0 18px 19px;
+    padding-left: 0;
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    gap: 51.5px;
   }
 
   .cards {
-    margin-bottom: 53.5px;
+    margin-bottom: 0;
   }
 
   .card__title {
-    padding: 4px 10px 4px 11px;
+    padding: 6px 10px 4px 10px;
   }
 
   .card-image__all {
-    display: block;
     inline-size: 100%;
     block-size: 100%;
-    object-fit: cover;
-    object-position: center;
   }
 
   .card__image-text {
     margin: 23px 12px 0 0;
   }
 
+  .card__container {
+    margin: 0;
+  }
+
   .card__container-text {
-    margin: 23.5px 28px 25px 26px;
-    padding: 0 3.5px 0 0;
-    gap: 27px;
+    margin: 22px 28px 25px 26px;
+    padding: 0 1px 0 0;
+    gap: 25.5px;
   }
 
   .card__buttons {
-    margin: 0 25px 22px 168px;
+    margin: 1px 25px 22px 0;
   }
 
   .footer__button {
@@ -604,5 +531,23 @@
 
   .footer__button-icon {
     max-width: 28px;
+  }
+
+  .dialog {
+    min-width: 0px;
+  }
+
+  .dialog__form {
+    grid-template-columns: 0.21fr 1fr;
+  }
+
+  .dialog__floppy {
+    justify-self: flex-end;
+  }
+
+  .dialog__button {
+    margin: 0 30px 30px 40px;
+    width: 257px;
+    height: 38px;
   }
 }
