--- a/styles/variables.css
+++ b/styles/variables.css
@@ -4,7 +4,7 @@
     --main-font: 'Inter-Variable';
     --main-font-weight: 400;
     --header-font-weight: 700;
-    --card-font-weight: 696;
+    --card-width: 696px;
     --accent-font: 'PressStart2P-Regular';
     --bg-color: rgb(250,250,250);
     --bg-gradient: 
