--- a/styles/themes.css
+++ b/styles/themes.css
@@ -13,15 +13,11 @@
   --header-card-height: 323px; /* --header-font-height */
   --card-width: 696px; /* --card-font-weight */
   --last-card-width: 337px; /* --footer-font-weight */
-  --accent-font: "PressStart2P-Regular";
+  --accent-font: "PressStart2P";
   --bg-color: rgb(250, 250, 250);
-  --bg-gradient: repeating-linear-gradient(
-      90deg,
-      #d3d3d3 0 2px,
-      rgb(0 0 0/ 0) 2px 4px
-    ),
-    repeating-linear-gradient(180deg, #d3d3d3 0 2px, rgb(0 0 0/0) 2px 4px),
-    linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
+  --bg-gradient: repeating-linear-gradient(#d3d3d3 0 2px, transparent 2px 4px),
+    repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
+    linear-gradient(#e7e7e7 0.01%, #1a1a1a);
   --text-color: #000000;
   --logo-color: rgb(250, 250, 250);
   --border-color: #000;
@@ -45,15 +41,11 @@
   --header-card-height: 368px;
   --card-width: 696px;
   --last-card-width: 335px;
-  --accent-font: "PressStart2P-Regular";
+  --accent-font: "PressStart2P";
   --bg-color: #000000;
-  --bg-gradient: repeating-linear-gradient(
-      90deg,
-      #000 0px 2px,
-      rgba(0, 0, 0/ 0) 2px 4px
-    ),
-    repeating-linear-gradient(180deg, #000 0px 2px, rgb(0, 0, 0, 0) 2px 4px),
-    linear-gradient(180deg, #007f0c 0%, #004306 100%);
+  --bg-gradient: repeating-linear-gradient(#000 0px 2px, transparent 2px 4px),
+    repeating-linear-gradient(to right, #000 0px 2px, transparent 2px 4px),
+    linear-gradient(#007f0c, #004306);
   --text-color: #00cc14;
   --logo-color: #000000;
   --border-color: #00cc14;
@@ -78,15 +70,11 @@
     --header-card-height: 368px;
     --card-width: 696px;
     --last-card-width: 335px;
-    --accent-font: "PressStart2P-Regular";
+    --accent-font: "PressStart2P";
     --bg-color: #000000;
-    --bg-gradient: repeating-linear-gradient(
-        90deg,
-        #000 0px 2px,
-        rgba(0, 0, 0/ 0) 2px 4px
-      ),
-      repeating-linear-gradient(180deg, #000 0px 2px, rgb(0, 0, 0, 0) 2px 4px),
-      linear-gradient(180deg, #007f0c 0%, #004306 100%);
+    --bg-gradient: repeating-linear-gradient(#000 0px 2px, transparent 2px 4px),
+      repeating-linear-gradient(to right, #000 0px 2px, transparent 2px 4px),
+      linear-gradient(#007f0c, #004306);
     --text-color: #00cc14;
     --logo-color: #000000;
     --border-color: #00cc14;
@@ -112,15 +100,11 @@
     --header-card-height: 364px;
     --card-width: 696px;
     --last-card-width: 335px;
-    --accent-font: "PressStart2P-Regular";
+    --accent-font: "PressStart2P";
     --bg-color: rgb(250, 250, 250);
-    --bg-gradient: repeating-linear-gradient(
-        90deg,
-        #d3d3d3 0 2px,
-        rgb(0 0 0/ 0) 2px 4px
-      ),
-      repeating-linear-gradient(180deg, #d3d3d3 0 2px, rgb(0 0 0/0) 2px 4px),
-      linear-gradient(180deg, #e7e7e7 0%, #e7e7e7 0.01%, #1a1a1a 100%);
+    --bg-gradient: repeating-linear-gradient(#d3d3d3 0 2px, transparent 2px 4px),
+      repeating-linear-gradient(to right, #d3d3d3 0 2px, transparent 2px 4px),
+      linear-gradient(#e7e7e7 0.01%, #1a1a1a);
     --text-color: #000000;
     --logo-color: rgb(250, 250, 250);
     --border-color: #000;
