--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,7 +5,7 @@
     --main-font-weight: 400;
     --header-font-weight: 700;
     --card-width: 696px;
-    --accent-font: 'PressStart2P-Regular';
+    --accent-font: 'PressStart2P';
     --bg-color: rgb(250,250,250);
     --bg-gradient: 
         repeating-linear-gradient(to right, #d3d3d3, rgb(244 152 173 / 0) 2px),
