--- a/styles/style.css
+++ b/styles/style.css
@@ -110,7 +110,7 @@
   height: 2px;
   bottom: 0;
   left: 0;
-  right: 0;
+  right: 1px;
   transform: scaleX(0%);
   transform-origin: left;
   transition: transform 0.3s ease;
@@ -379,7 +379,8 @@
   font-size: clamp(0.875rem, 0.875rem + 0vw, 0.875rem);
   text-transform: uppercase;
   line-height: 150%;
-  min-width: 357px;
+  /*min-width: 357px;*/
+  width: clamp(21.3125rem, 20.9604rem + 1.5023vw, 22.3125rem);
 }
 
 .dialog__form {
