--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,3 +51,9 @@ ol {
   clip-path: inset(50%);
   white-space: nowrap;
 }
+
+@supports (font-variation-settings: "wght" 400, "wght" 785) {
+  body {
+    font-family: "Inter-Variable", sans-serif;
+  }
+}
